Se actualiza la seccion de contacto y responsive de toda la web

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                         <li>Comercio exterior</li>
                         <li>Logística internacional</li>
                     </ul>
-                    <button id="consulta-button" class="boton-consulta">Consulta Ahora</button>
+                 <!--   <button id="consulta-button" class="boton-consulta">Consulta Ahora</button>  -->
                 </div>
             </div>
         </div>
@@ -164,7 +164,7 @@
             </div>
         </div>
     </section>
-
+ <!--
     <section id="contacto" class="section contacto-section">
         <div class="container">
             <div class="text">
@@ -187,10 +187,72 @@
                 </div>
             </div>
         </div>
-    </section>
-    <!-- Botón flotante Consulta Ahora -->
-    <a href="#contacto" id="boton-flotante" class="boton-consulta">Consulta Ahora</a>
-    <button id="scroll-top-button" class="scroll-top-button">⬆</button>
+    </section> 
+-->
+
+<section id="contacto">
+    <div class="container">
+      <div class="text">
+        <h2>Contacta con nosotros</h2>
+        <div class="content">
+            <div class="mapa">
+                <iframe 
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3799.029288479519!2d-63.20243012406736!3d-17.790320575263408!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x93f1e96fa087166f%3A0x7d18cc3990c66447!2sOROZCOMEX%20S.R.L.%20Agencia%20Despachante%20de%20Aduanas!5e0!3m2!1ses!2sbo!4v1739367453834!5m2!1ses!2sbo" 
+                    width="100%" 
+                    height="300" 
+                    style="border:0;" 
+                    allowfullscreen="" 
+                    loading="lazy" 
+                    referrerpolicy="no-referrer-when-downgrade">
+                </iframe>
+            </div>
+    
+            <div class="details">
+                <div class="info">
+                    <h3>Oficina Principal</h3>
+                    <p>Calle Madrejón #22, Barrio Santa Rosita.</p>
+                </div>
+                <div class="horarios">
+                    <h3>Horarios de Atención</h3>
+                    <p><strong>Lun - Vie:</strong> 09:00 - 17:00</p>
+                    <p><strong>Sábado - Dom:</strong> Cerrado</p>
+                </div>
+                 <!--
+                <div class="botones-contacto">
+                    <a href="mailto:orozcomex.srl@gmail.com?subject=Consulta%20sobre%20servicios" class="boton-contacto email">
+                    <span>📧</span>Email
+                    </a>
+                    <a href="http://wa.me/59169237022" target="_blank" class="boton-contacto whatsapp">
+                    <span>💬</span>WhatsApp
+                    </a>
+                </div>
+                -->
+            </div>
+        </div>
+        <div class="social">
+            <a href="http://wa.me/59169237022" target="_blank">
+                <img src="icon/whatsapp-sin-fondo.png" alt="WhatsApp">
+            </a>
+            <a href="https://www.facebook.com/OROZCOMEX.SRL?mibextid=LQQJ4d" target="_blank">
+                <img src="icon/facebook-sin-fondo.png" alt="Facebook">
+            </a>
+            <a href="https://www.instagram.com/orozcomex_srl/?igshid=OGQ5ZDc2ODk2ZA%3D%3D" target="_blank">
+                <img src="icon/instagram-sin-fondo.png" alt="Instagram">
+            </a>
+            <a href="mailto:orozcomex.srl@gmail.com?subject=Consulta%20sobre%20servicios" >
+                <img src="icon/email-sin-fondo.png" alt="Email">
+            </a>
+        </div>
+      </div>  
+      <div class="image">
+        <img src="img/Contacto-sin-fondo.png" alt="Imagen de contacto">
+      </div>
+    </div>
+  </section>
+  
+   <!-- Botón flotante -->
+    <a href="#contacto" id="btn-consulta" class="boton-flotante">Consulta Ahora</a>
+
     <script src="js/script.js" charset="utf-8"></script>
 </body>
 </html>
