Se actualiza el ícono para Contacto, se quita la imagen de la sección Intermedia y se modifica el estilo para la sección Quienes Somos

--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
             </div>
       
     </section>
-
+<!-- 
     <section id="intermedia" class="section intermedia-section">
         <div class="overlay"></div>
         <div class="imagen-intermedia">
             <img src="img/intermedia.png" alt="Imagen intermedia" />
         </div>
     </section>
-
+-->
     <section id="mision-vision" class="section mision-vision">
      
             <div class="image">
@@ -251,7 +251,11 @@
   </section>
   
    <!-- Botón flotante -->
-    <a href="#contacto" id="btn-consulta" class="boton-flotante">Consulta Ahora</a>
+   <!-- <a href="#contacto" id="btn-consulta" class="boton-flotante">Consulta Ahora</a> -->
+
+    <a href="#contacto" id="btn-consulta" class="boton-flotante">
+        <img src="icon/call_center-blanco-sin-fondo.png" alt="Consulta Ahora">
+    </a>
 
     <script src="js/script.js" charset="utf-8"></script>
 </body>
