Se adecua  el titulo de la sección Quienes Somos para dispositivos moviles

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     <section id="quienes-somos" class="section quienes-somos-section">
         
             <div class="text">
-                <h2>¿Quiénes somos?</h2>
+                <div class="title">
+                    <h2>¿Quiénes somos?</h2>
+                </div>
                 <p>OROZCOMEX S.R.L., Agencia Despachante de Aduanas, empresa establecida de acuerdo a normativas exigentes por la ADUANA NACIONAL y el Ministerio de Economía y Finanzas Públicas desde el año 2019. Presencia con oficinas principales en la ciudad de Santa Cruz de la Sierra, sucursales en la ciudad de La Paz, frontera Puerto Suárez, frontera Tambo Quemado.</p>
             </div>
             <div class="image">
@@ -86,7 +88,7 @@
             </div>
             <div class="text">
                 <div class="text-title">
-                <h2>Servicios</h2>
+                    <h2>Servicios</h2>
                 </div>
                 
                 <h3>Importación</h3>
